--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,46 @@
             >
         </activity>
         <activity
+            android:name=".ProfileTeacherActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:label="Quest?on"
+            android:theme="@style/Theme.Question2.Fullscreen"
+            >
+        </activity>
+        <activity
+            android:name=".TeamsTeacherActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:label="Quest?on"
+            android:theme="@style/Theme.Question2.Fullscreen"
+            >
+        </activity>
+        <activity
+            android:name=".TeamsStudentActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:label="Quest?on"
+            android:theme="@style/Theme.Question2.Fullscreen"
+            >
+        </activity>
+        <activity
+            android:name=".ProfileStudentActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:label="Quest?on"
+            android:theme="@style/Theme.Question2.Fullscreen"
+            >
+        </activity>
+        <activity
+            android:name=".MainActivityStudent"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:label="Quest?on"
+            android:theme="@style/Theme.Question2.Fullscreen"
+            >
+        </activity>
+        <activity
             android:name=".CreateQuestionnaireActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true"
