Navigation and adding and deleting questions fixed. Also assign a code to the questionnaire

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,14 @@
             >
         </activity>
         <activity
+            android:name=".EditQuestionnaireActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:label="Quest?on"
+            android:theme="@style/Theme.Question2.Fullscreen"
+            >
+        </activity>
+        <activity
             android:name=".ForgotPasswordActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true"
