--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+
 android {
     compileSdk 31
 
@@ -55,4 +56,5 @@ dependencies {
     implementation 'androidx.test.ext:junit:1.1.3'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'org.apache.poi:poi:3.17'
 }
