--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
     implementation 'org.apache.poi:poi:3.17'
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
     implementation 'com.google.firebase:firebase-inappmessaging-display-ktx:20.3.2'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito:mockito-inline:3.12.4'
+
+
 }
